# CricPyAPI

./: app.py  data.db  pyproject.toml  requirements.txt
